# Klitorous

./: README.md  app.py  keldb.py  pyproject.toml  readthedocs.yaml  testing.py
.github/workflows/: python-publish-test.yml  python-publish.yml
docs/: api.rst  best_practices.rst  conf.py  hooks.rst  hooksapi.rst  index.rst  locksapi.rst  nodes.rst  quickstart.rst
src/keldb/: __init__.py  locking.py
src/klitorous/: __init__.py  hooks.py  locking.py
